--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-h1 {
+h1 { 
   font-size: 40px;
   font-family: Arial
 }
@@ -29,3 +29,79 @@ div {
   background-color: darkcyan;
   text-align: right;
 }
+
+/***************FE*****************/
+body {
+    font-family: Arial;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+
+.header-container {
+    background-color: darkcyan;
+    color: #fff;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    font-family: Arial;
+
+    
+}
+
+nav ul li {
+    margin-left: 20px;
+    font-family: Arial;
+
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.main {
+    padding: 20px;
+}
+
+.news-section {
+    background-color: #fff;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 800px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.news-item {
+    margin-bottom: 20px;
+    text-align: left; 
+}
+
+.news-item h3 {
+    color: #00539f;
+    margin: 0;
+}
+
+.news-item p {
+    color: #333;
+}
+
+.footer-container {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+/***************FE*****************/
